# vexy-mkdocs-tags

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  TODO.md  build.sh  publish.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  index.md
src/tags/: __init__.py  plugin.py
src/tags/templates/: tags.md.template
tags/: __init__.py
tests/: __init__.py  test_integration.py  test_plugin.py
