# this_file: pyproject.toml

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vexy-mkdocs-tags"
dynamic = ["version"]
description = "MkDocs plugin that processes tags in YAML front matter and generates a tags index page"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mkdocs", "plugin", "python", "markdown", "tags"]
authors = [
  { name = "JL Diaz", email = "jldiaz@gmail.com" },
  { name = "Adam Twardoch", email = "adam+github@twardoch.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: MkDocs",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "mkdocs>=1.5",
  "jinja2",
  "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/vexyart/vexy-mkdocs-tags"
Repository = "https://github.com/vexyart/vexy-mkdocs-tags"
Issues = "https://github.com/vexyart/vexy-mkdocs-tags/issues"
Changelog = "https://github.com/vexyart/vexy-mkdocs-tags/blob/main/CHANGELOG.md"

[project.entry-points."mkdocs.plugins"]
tags = "tags.plugin:TagsPlugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tags/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["tags"]

[tool.hatch.build.targets.sdist]
include = [
  "/tags",
  "/tests",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
